# msi-gt72s-keyboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Color.cpp  Color.h  Keyboard.cpp  Keyboard.h  main.cpp
